{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 191,
  "lineage": "0b02bb8b-2b3a-886f-3ae1-7e6d66fe5edd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093b1448b2096a8b6",
            "arn": "arn:aws:ec2:us-east-2:339713112256:elastic-ip/eipalloc-093b1448b2096a8b6",
            "association_id": "eipassoc-05f4c2dc087997fc7",
            "domain": "vpc",
            "id": "eipalloc-093b1448b2096a8b6",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0f3024e00e546aa33",
            "private_dns": "ip-192-168-7-2.us-east-2.compute.internal",
            "private_ip": "192.168.7.2",
            "public_dns": "ec2-3-20-102-92.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.102.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "0"
            },
            "tags_all": {
              "Name": "0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0325701ad8542480d",
            "arn": "arn:aws:ec2:us-east-2:339713112256:elastic-ip/eipalloc-0325701ad8542480d",
            "association_id": "eipassoc-076a67f24258ffe14",
            "domain": "vpc",
            "id": "eipalloc-0325701ad8542480d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-019da30341918725e",
            "private_dns": "ip-192-168-28-224.us-east-2.compute.internal",
            "private_ip": "192.168.28.224",
            "public_dns": "ec2-3-22-210-255.us-east-2.compute.amazonaws.com",
            "public_ip": "3.22.210.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "1"
            },
            "tags_all": {
              "Name": "1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff0eb4607dca02f4",
            "arn": "arn:aws:ec2:us-east-2:339713112256:elastic-ip/eipalloc-0ff0eb4607dca02f4",
            "association_id": "eipassoc-06450b6670d09e9d3",
            "domain": "vpc",
            "id": "eipalloc-0ff0eb4607dca02f4",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e3314927676e22c1",
            "private_dns": "ip-192-168-35-119.us-east-2.compute.internal",
            "private_ip": "192.168.35.119",
            "public_dns": "ec2-3-136-249-172.us-east-2.compute.amazonaws.com",
            "public_ip": "3.136.249.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "2"
            },
            "tags_all": {
              "Name": "2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0979846cd6eec980a",
            "arn": "arn:aws:ec2:us-east-2:339713112256:elastic-ip/eipalloc-0979846cd6eec980a",
            "association_id": "eipassoc-0067919ee188754d7",
            "domain": "vpc",
            "id": "eipalloc-0979846cd6eec980a",
            "network_border_group": "us-east-2",
            "network_interface": "eni-053a871aa3184031a",
            "private_dns": "ip-192-168-61-100.us-east-2.compute.internal",
            "private_ip": "192.168.61.100",
            "public_dns": "ec2-18-118-66-3.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.66.3",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "3"
            },
            "tags_all": {
              "Name": "3"
            },
            "vpc": true
          }
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06908627effd674a3",
            "arn": "arn:aws:ec2:us-east-2:339713112256:elastic-ip/eipalloc-06908627effd674a3",
            "association_id": "eipassoc-0c2efab67bd932151",
            "domain": "vpc",
            "id": "eipalloc-06908627effd674a3",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0592c514e8a347019",
            "private_dns": "ip-192-168-76-101.us-east-2.compute.internal",
            "private_ip": "192.168.76.101",
            "public_dns": "ec2-13-58-87-221.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.87.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "4"
            },
            "tags_all": {
              "Name": "4"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-0ff889d1b1a1373aa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff889d1b1a1373aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02d8a36ae731fda90",
            "private_dns": "ip-192-168-15-243.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.15.243",
            "public_ip": "18.226.82.99",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09551055f7360c5f2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0983fca41fae989f9",
            "tags": {
              "Name": "public_instance-instance1"
            },
            "tags_all": {
              "Name": "public_instance-instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0877a5267afd4f046"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-09cf37eae945f8300",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cf37eae945f8300",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc8e6756e3a53a31",
            "private_dns": "ip-192-168-24-234.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.24.234",
            "public_ip": "13.59.215.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014e02c633e3661ca",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1abdf6a5d8439d6",
            "tags": {
              "Name": "public_instance-instance2"
            },
            "tags_all": {
              "Name": "public_instance-instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0877a5267afd4f046"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-0f868363eabb7e1e8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f868363eabb7e1e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec23fb70ddedd5b1",
            "private_dns": "ip-192-168-38-236.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.38.236",
            "public_ip": "3.142.91.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-038161f3b445c741f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4b18da14ae2cf83",
            "tags": {
              "Name": "public_instance-instance3"
            },
            "tags_all": {
              "Name": "public_instance-instance3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0877a5267afd4f046"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-046ecfb272e7aa527",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046ecfb272e7aa527",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c8b4d9939bd0425",
            "private_dns": "ip-192-168-62-60.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.62.60",
            "public_ip": "3.144.15.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b0f082d4e63dce4e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033dd2d6299072d59",
            "tags": {
              "Name": "public_instance-instance4"
            },
            "tags_all": {
              "Name": "public_instance-instance4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0877a5267afd4f046"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09040d770ffe2224f",
            "arn": "arn:aws:ec2:us-east-2:339713112256:instance/i-098ad458aa9709748",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-098ad458aa9709748",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e273cbb0115393a5",
            "private_dns": "ip-192-168-78-120.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.78.120",
            "public_ip": "3.142.184.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0eb63c1d718f73a8c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0898554b6d143ad0d",
            "tags": {
              "Name": "public_instance-instance5"
            },
            "tags_all": {
              "Name": "public_instance-instance5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0877a5267afd4f046"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "PublicIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:internet-gateway/igw-09736173e85d4e82b",
            "id": "igw-09736173e85d4e82b",
            "owner_id": "339713112256",
            "tags": {
              "Name": "PublicIGW"
            },
            "tags_all": {
              "Name": "PublicIGW"
            },
            "vpc_id": "vpc-0d60c74031584f2ca"
          },
          "dependencies": [
            "aws_vpc.functionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-093b1448b2096a8b6",
            "association_id": "eipassoc-05f4c2dc087997fc7",
            "connectivity_type": "public",
            "id": "nat-0f5988f588d036a64",
            "network_interface_id": "eni-0f3024e00e546aa33",
            "private_ip": "192.168.7.2",
            "public_ip": "3.20.102.92",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0983fca41fae989f9",
            "tags": {
              "Name": "0"
            },
            "tags_all": {
              "Name": "0"
            }
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0325701ad8542480d",
            "association_id": "eipassoc-076a67f24258ffe14",
            "connectivity_type": "public",
            "id": "nat-086823d83a2ad9aa8",
            "network_interface_id": "eni-019da30341918725e",
            "private_ip": "192.168.28.224",
            "public_ip": "3.22.210.255",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c1abdf6a5d8439d6",
            "tags": {
              "Name": "1"
            },
            "tags_all": {
              "Name": "1"
            }
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff0eb4607dca02f4",
            "association_id": "eipassoc-06450b6670d09e9d3",
            "connectivity_type": "public",
            "id": "nat-01b72b69ad0f1b645",
            "network_interface_id": "eni-0e3314927676e22c1",
            "private_ip": "192.168.35.119",
            "public_ip": "3.136.249.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d4b18da14ae2cf83",
            "tags": {
              "Name": "2"
            },
            "tags_all": {
              "Name": "2"
            }
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0979846cd6eec980a",
            "association_id": "eipassoc-0067919ee188754d7",
            "connectivity_type": "public",
            "id": "nat-0c70924360c86f8de",
            "network_interface_id": "eni-053a871aa3184031a",
            "private_ip": "192.168.61.100",
            "public_ip": "18.118.66.3",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033dd2d6299072d59",
            "tags": {
              "Name": "3"
            },
            "tags_all": {
              "Name": "3"
            }
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06908627effd674a3",
            "association_id": "eipassoc-0c2efab67bd932151",
            "connectivity_type": "public",
            "id": "nat-084225aa93a7550be",
            "network_interface_id": "eni-0592c514e8a347019",
            "private_ip": "192.168.76.101",
            "public_ip": "13.58.87.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0898554b6d143ad0d",
            "tags": {
              "Name": "4"
            },
            "tags_all": {
              "Name": "4"
            }
          },
          "dependencies": [
            "aws_eip.Elastic-ip",
            "aws_internet_gateway.PublicIGW",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:route-table/rtb-0fb0d738ee64857d3",
            "id": "rtb-0fb0d738ee64857d3",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09736173e85d4e82b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "functionvpc-PrivateRT"
            },
            "tags_all": {
              "Name": "functionvpc-PrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d60c74031584f2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_vpc.functionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:route-table/rtb-027ab505feaabbecc",
            "id": "rtb-027ab505feaabbecc",
            "owner_id": "339713112256",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09736173e85d4e82b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "functionvpc-PubRT"
            },
            "tags_all": {
              "Name": "functionvpc-PubRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d60c74031584f2ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_vpc.functionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0938af2ae7c5e85b4",
            "route_table_id": "rtb-027ab505feaabbecc",
            "subnet_id": "subnet-0983fca41fae989f9"
          },
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_route_table.PubRT",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026e9dfa4787119ad",
            "route_table_id": "rtb-027ab505feaabbecc",
            "subnet_id": "subnet-0c1abdf6a5d8439d6"
          },
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_route_table.PubRT",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0768d2943058f5357",
            "route_table_id": "rtb-027ab505feaabbecc",
            "subnet_id": "subnet-0d4b18da14ae2cf83"
          },
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_route_table.PubRT",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a01639a58b82bd5b",
            "route_table_id": "rtb-027ab505feaabbecc",
            "subnet_id": "subnet-033dd2d6299072d59"
          },
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_route_table.PubRT",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b76c1d638c9e19a0",
            "route_table_id": "rtb-027ab505feaabbecc",
            "subnet_id": "subnet-0898554b6d143ad0d"
          },
          "dependencies": [
            "aws_internet_gateway.PublicIGW",
            "aws_route_table.PubRT",
            "aws_subnet.public_subnets",
            "aws_vpc.functionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-0983fca41fae989f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0983fca41fae989f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionvpc-pubsub-1"
            },
            "tags_all": {
              "Name": "functionvpc-pubsub-1"
            },
            "vpc_id": "vpc-0d60c74031584f2ca"
          },
          "dependencies": [
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-0c1abdf6a5d8439d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1abdf6a5d8439d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionvpc-pubsub-2"
            },
            "tags_all": {
              "Name": "functionvpc-pubsub-2"
            },
            "vpc_id": "vpc-0d60c74031584f2ca"
          },
          "dependencies": [
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-0d4b18da14ae2cf83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "192.168.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4b18da14ae2cf83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionvpc-pubsub-3"
            },
            "tags_all": {
              "Name": "functionvpc-pubsub-3"
            },
            "vpc_id": "vpc-0d60c74031584f2ca"
          },
          "dependencies": [
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-033dd2d6299072d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033dd2d6299072d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionvpc-pubsub-4"
            },
            "tags_all": {
              "Name": "functionvpc-pubsub-4"
            },
            "vpc_id": "vpc-0d60c74031584f2ca"
          },
          "dependencies": [
            "aws_vpc.functionvpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:subnet/subnet-0898554b6d143ad0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "192.168.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0898554b6d143ad0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713112256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "functionvpc-pubsub-5"
            },
            "tags_all": {
              "Name": "functionvpc-pubsub-5"
            },
            "vpc_id": "vpc-0d60c74031584f2ca"
          },
          "dependencies": [
            "aws_vpc.functionvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "functionvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:339713112256:vpc/vpc-0d60c74031584f2ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0bd1885b46567e41b",
            "default_route_table_id": "rtb-07794f84f3eda00a2",
            "default_security_group_id": "sg-0877a5267afd4f046",
            "dhcp_options_id": "dopt-0e363e00aa4ec7887",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d60c74031584f2ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07794f84f3eda00a2",
            "owner_id": "339713112256",
            "tags": {
              "Name": "functionvpc"
            },
            "tags_all": {
              "Name": "functionvpc"
            }
          }
        }
      ]
    }
  ]
}